# nano-scale-rl

./: .gitignore  CLAUDE.md  CODE.md  README.md  pyproject.toml
nano_scale_rl/data/: eval_math.py  export_training_data.py
nano_scale_rl/generator/: rollout.py  rollout_worker.py
nano_scale_rl/trainer/: train_rl.py
scale_rl/: train.sh  train.yaml  train_entry.py
scale_rl/algos/: loss.py  utils.py
scale_rl/envs/: __init__.py  _imports.py  base.py  dapo_env.py  livecodebench.py  models.py
scale_rl/envs/harness/: base.py  openhands_sdk.py  shell.py
scale_rl/envs/runtime/: apptainer.py  base.py  docker.py  factory.py  models.py
scale_rl/eval/: eval_aime_2025.py  eval_math.py  utils.py
scale_rl/inference/: models.py  rollout.py  rollout_worker.py
scale_rl/replay_buffer/: __init__.py  buffer.py
scale_rl/scripts/: train.sh  train.yaml  train_entry.py
scale_rl/trainer/: config.py  dp_utils.py  loss.py  setup_utils.py  train.py
scale_rl/trainer/distributed/: compile.py
scale_rl/trainer/models/common/: attention.py
